--- a/src/main/resources/templates/register-admin.html
+++ b/src/main/resources/templates/register-admin.html
@@ -7,6 +7,7 @@
 <body>
     <h1>Registrar Usuario Admin</h1>
     <form th:action="@{/admin/register}" method="post">
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
         <label for="nombre">Nombre:</label>
         <input type="text" id="nombre" name="nombre" required /><br/><br/>
 
