--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -13,6 +13,7 @@
     <p th:if="${msg}" th:text="${msg}" class="mb-4 text-green-600 text-center"></p>
 
     <form th:action="@{/users/register}" method="post" class="space-y-5">
+      <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 
       <div>
         <label class="block mb-1 font-medium text-gray-700" for="nombre">Nombre:</label>
@@ -38,6 +39,3 @@
       </button>
     </form>
   </div>
-
-</body>
-</html>
