--- a/src/main/resources/templates/email-form.html
+++ b/src/main/resources/templates/email-form.html
@@ -11,6 +11,7 @@
 <p th:if="${msg}" th:text="${msg}" style="color: green;"></p>
 
 <form th:action="@{/email/send}" method="post">
+    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 
     <label>Para:</label><br>
     <input type="email" name="to" required><br><br>
