--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -166,7 +166,7 @@
             user-select: none;
         }
 
-        .register-section a {
+         .register-section a {
             color: #0b3d91;
             font-weight: 700;
             text-decoration: none;
@@ -196,12 +196,12 @@
                     Has cerrado sesión correctamente.
                 </div>
 
-                <label for="username" class="sr-only">Usuario</label>
+                <label for="username" class="sr-only">Correo electrónico</label>
                 <div class="input-group">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                         <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/>
                     </svg>
-<input type="text" id="username" name="username" required autofocus autocomplete="username" placeholder="Usuario" />
+<input type="email" id="username" name="username" required autofocus autocomplete="email" placeholder="Ingresa tu correo" />
                 </div>
 
                 <label for="password" class="sr-only">Contraseña</label>
